# LessonFlowAI

./: .env.example  .gitignore  HOW_TO_USE.md  README.md  build_lesson.sh  pyproject.toml
.claude/skills/: 00-environment.md  00-orchestrator.md  01-planner.md  02-animator.md  03-builder.md  04-subtitles.md  05-voice.md  06-post.md
doc/: spec.txt
lessonflow/: __init__.py  cli.py
schema/: glossary.schema.json  storyboard.schema.json  style_guide.schema.json
scripts/: aliyun_tts.py  init_env.sh  validate_storyboard.py
templates/examples/: attention_storyboard.json
templates/manim_snippets/base/: __init__.py  grid_layout.py  style_mixin.py
templates/manim_snippets/patterns/: __init__.py  comparison.py  flowchart.py  formula_derivation.py  list_reveal.py
templates/style_guides/: tech-minimal.json
