[project]
name = "lessonflow-ai"
version = "0.1.0"
description = "AI-powered educational video generation system using Manim"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LessonFlowAI Team"}
]
keywords = ["manim", "education", "ai", "video", "tts", "animation"]

dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "pydub>=0.25.0",
    "rich>=13.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
manim = [
    "manim>=0.18.0",
]
tts = [
    "alibabacloud-nls>=1.0.0",
]
all = [
    "manim>=0.18.0",
    "alibabacloud-nls>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lessonflow"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[project.scripts]
lessonflow = "lessonflow.cli:main"
